tests/knowledge/context/aws/scenarios/cross_version/ecs/fargate/ecs-instance-permissions-outbound-connections/main.tf
locals {
  region  = "us-east-1"
  http_port = 80
  max_port = 65535
  cidr_block = "192.168.100.128/25"
  zero_cidr_block = "0.0.0.0/0"
  s3_prefix_list_cidr_block = "54.231.0.0/17"
}

resource "aws_vpc" "test-vpc" {
  cidr_block           = local.cidr_block
}

resource "aws_subnet" "private-subnet" {
  vpc_id     = aws_vpc.test-vpc.id
  cidr_block = local.cidr_block
  availability_zone = "us-east-1a"
}

resource "aws_route_table" "private-rtb" {
  vpc_id = aws_vpc.test-vpc.id

  tags = {
    Name = "private-rtb"
  }
}

resource "aws_vpc_endpoint_route_table_association" "example" {
  route_table_id  = aws_route_table.private-rtb.id
  vpc_endpoint_id = aws_vpc_endpoint.s3-vpce-gw.id
}

resource "aws_route_table_association" "private-rtb-assoc" {
  subnet_id      = aws_subnet.private-subnet.id
  route_table_id = aws_route_table.private-rtb.id
}

resource "aws_network_acl" "private-subnet-nacl" {
  vpc_id     = aws_vpc.test-vpc.id
  subnet_ids = [aws_subnet.private-subnet.id]
}

resource "aws_network_acl_rule" "inbound-rule" {
  network_acl_id = aws_network_acl.private-subnet-nacl.id
  rule_number    = 100
  egress         = false
  protocol       = "tcp"
  rule_action    = "allow"
  cidr_block     = local.cidr_block
  from_port      = local.http_port
  to_port        = local.http_port
}

resource "aws_network_acl_rule" "outbound-rule" {
  network_acl_id = aws_network_acl.private-subnet-nacl.id
  rule_number    = 100
  egress         = true
  protocol       = -1
  rule_action    = "allow"
  cidr_block     = local.zero_cidr_block
  from_port      = 0
  to_port        = 0
}

resource "aws_security_group" "http-sg" {
  name   = "sg"
  vpc_id = aws_vpc.test-vpc.id

  ingress {
    description = "mysql"
    from_port   = local.http_port
    to_port     = local.http_port
    protocol    = "tcp"
    cidr_blocks = [local.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [local.zero_cidr_block]
  }

}

resource "aws_ecs_cluster" "ecs-cluster" {
  name = "ecs-cluster"
}

resource "aws_ecs_task_definition" "web-server-task-definition" {
  family                = "web-server-task"
  container_definitions = <<DEFINITION
  [
    {
      "name": "apache-web-server",
      "image": "/ecr/repository/image/path",
      "essential": true,
      "portMappings": [
        {
          "containerPort": 80,
          "hostPort": 80,
          "protocol": "tcp"
        }
      ]
    }
  ]
  DEFINITION
  execution_role_arn = aws_iam_role.ecs-instance-role.arn
  task_role_arn = aws_iam_role.ecs-instance-role.arn
  network_mode = "awsvpc"
  memory = "512"
  cpu = "256"
  requires_compatibilities = ["FARGATE"]
}

resource "aws_iam_role" "ecs-instance-role" {
  name = "ecs-instance-role-test"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": "sts:AssumeRole",
      "Principal": { "AWS": "*" },
      "Effect": "Allow",
      "Sid": ""
    }
  ]
}
EOF

}

resource "aws_ecs_service" "web-server-service" {
  name            = "web-server-service"
  cluster         = aws_ecs_cluster.ecs-cluster.id
  task_definition = aws_ecs_task_definition.web-server-task-definition.arn
  desired_count   = 1
  launch_type = "FARGATE"

  network_configuration {
    subnets = [aws_subnet.private-subnet.id]
    security_groups = [aws_security_group.http-sg.id]
    assign_public_ip = false
  }
}

resource "aws_vpc_endpoint" "s3-vpce-gw" {
  vpc_id       = aws_vpc.test-vpc.id
  service_name = "com.amazonaws.us-east-1.s3"
  policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": [
        "s3:*"
      ],
      "Principal": { "AWS": "*" },
      "Effect": "Allow",
      "Resource": "*"
    }
  ]
}
EOF
}

resource "aws_vpc_endpoint_route_table_association" "vpce-gw-to-private-rtb-assoc" {
  route_table_id  = aws_route_table.private-rtb.id
  vpc_endpoint_id = aws_vpc_endpoint.s3-vpce-gw.id
}

resource "aws_s3_bucket" "bucket" {
  bucket = "randombucketname92194"
  tags = {
    Name = "randombucketname92194"
  }

  depends_on = [aws_vpc_endpoint.s3-vpce-gw]
}

resource "aws_s3_bucket_policy" "public-bucket-policy" {
  bucket = aws_s3_bucket.bucket.id

  policy = <<POLICY
{
  "Version": "2012-10-17",
  "Id": "BUCKET_POLICY",
  "Statement": [
    {
      "Sid": "VpceAllow",
      "Effect": "Allow",
      "Principal": { "AWS": "${aws_iam_role.ecs-instance-role.arn}" },
      "Action": "s3:*",
      "Resource": "arn:aws:s3:::randombucketname92194/*"
    }
  ]
}
POLICY
}
